Fixed some layout bugs

--- a/css/style.css
+++ b/css/style.css
@@ -74,6 +74,10 @@
 	text-justify:inter-word;
 }
 
+.pull-next-down {
+	margin-bottom: 20px;
+}
+
 .label {
 	cursor: help;
 }
@@ -86,8 +90,8 @@
 	margin-bottom: -0px;
 }
 
-.ush-right {
-	margin-left: 5px;
+.push-right {
+	/*margin-left: 5px;*/
 }
 
 .crew {
